add static font awesome

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -11,7 +11,7 @@
 			<link href="/css/pygments.css" rel="stylesheet" type="text/css">
 			<link href="/fonts/fonts.css" rel="stylesheet" type="text/css">
 			<link href="/css/style.css" rel="stylesheet" type="text/css">
-			<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+			<link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 		{% endblock %}
   </head>
 
