--- a/theme/templates/720.html
+++ b/theme/templates/720.html
@@ -39,7 +39,7 @@
 {% endblock %}
 
 {% block content %}
-<div class='col-xs-6' style='height:100%'>
+<div class='col-xs-6 center-content' style='height:100%'>
 	<h1>{{ page.title }}</h1>
 	{{ page.content }}
 </div>
