allow extra head from pages

--- a/theme/templates/720.html
+++ b/theme/templates/720.html
@@ -21,6 +21,7 @@
 <meta name="msapplication-TileImage" content="/files/720/icons/mstile-144x144.png">
 <meta name="msapplication-config" content="/files/720/icons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
+{{ page.extrahead }}
 {% endblock head %}
 {% block title %}HCIN 720: {{ page.title }}{% endblock %}
 {% block toprow %}
